--- a/style.css
+++ b/style.css
@@ -125,6 +125,20 @@ ul#nav li a:hover:not(.active) {
 }
 
 
+/* Footer */
+.footer {
+    margin-top: 1rem;
+    bottom: 0;
+    text-align: center;
+    font-size: 0.7rem;
+}
+
+.footer-break {
+    margin-left: 3rem;
+    margin-right: 3rem;
+}
+
+
 
 /* Home Page */
 /*
@@ -365,6 +379,16 @@ ul#table {
 #recap {
     margin-top: 2rem;
 }
+
+
+
+/* Archive */
+#archive ul#nav li a.active {
+    background-color: #ff00ff;
+    color: white;
+}
+
+
 
 
 /* Contact Page */
